abstracao errada