@@ -34,25 +34,25 @@ public class UsuarioTransform {
 		UsuarioDto transform = transform(entity);
 
 		List<Integer> compradores = transform.getCompradores().stream()
-				.map(CompradorDto::getCompradorId)
-				.collect(Collectors.toList());
+		        .map(CompradorDto::getCompradorId)
+		        .collect(Collectors.toList());
 
 		List<Integer> fornecedores = transform.getFornecedores().stream()
-				.map(FornecedorDto::getFornecedorId)
-				.collect(Collectors.toList());
+		        .map(FornecedorDto::getFornecedorId)
+		        .collect(Collectors.toList());
 
 		return UsuarioPayload.builder()
-				.usuarioId(transform.getUsuarioId())
-				.nome(transform.getNome())
-				.email(transform.getEmail())
-				.login(transform.getLogin())
-				.senha(transform.getSenha())
-				.indEstoque(transform.getIndEstoque())
-				.perfil(transform.getPerfil().getDescricao())
-				.status(null)
-				.fornecedores(fornecedores)
-				.compradores(compradores)
-				.build();
+		        .usuarioId(transform.getUsuarioId())
+		        .nome(transform.getNome())
+		        .email(transform.getEmail())
+		        .login(transform.getLogin())
+		        .senha(transform.getSenha())
+		        .indEstoque(transform.getIndEstoque())
+		        .perfil(transform.getPerfil().getDescricao())
+		        .status(null)
+		        .fornecedores(fornecedores)
+		        .compradores(compradores)
+		        .build();
 	}
 
 	public UsuarioDto fetchUsuarioDto(Integer usuarioId) {
@@ -63,35 +63,35 @@ public class UsuarioTransform {
 	public UsuarioDto transform(Usuario entity) {
 		PerfilDto perfil = transform(entity.getPerfil());
 		List<CompradorDto> compradores = entity.getCompradores().stream()
-				.map(this::transform)
-				.collect(Collectors.toList());
+		        .map(this::transform)
+		        .collect(Collectors.toList());
 		List<FornecedorDto> fornecedores = entity.getFornecedores().stream()
-				.map(this::transform)
-				.collect(Collectors.toList());
+		        .map(this::transform)
+		        .collect(Collectors.toList());
 
 		return UsuarioDto.builder()
-				.usuarioId(entity.getUsuarioId())
-				.nome(entity.getNome())
-				.email(entity.getEmail())
-				.login(entity.getLogin())
-				// .senha(entity.getSenha()) **Nunca enviar senha para o front-end**
-				.indEstoque(entity.getIndEstoque())
-				.dataNascimento(entity.getDataNascimento() != null ? entity.getDataNascimento().toLocalDate() : null)
-				.perfil(perfil)
-				.fornecedores(fornecedores)
-				.compradores(compradores)
-				.build();
+		        .usuarioId(entity.getUsuarioId())
+		        .nome(entity.getNome())
+		        .email(entity.getEmail())
+		        .login(entity.getLogin())
+		        // .senha(entity.getSenha()) **Nunca enviar senha para o front-end**
+		        .indEstoque(entity.getIndEstoque())
+		        .dataNascimento(entity.getDataNascimento() != null ? entity.getDataNascimento().toLocalDate() : null)
+		        .perfil(perfil)
+		        .fornecedores(fornecedores)
+		        .compradores(compradores)
+		        .build();
 	}
 
 	public Usuario transform(UsuarioDto bean) {
 		Usuario entity = Optional.ofNullable(bean.getUsuarioId())
-				.map(id -> entitysFetchDao.findUsuarioById(id))
-				.orElseGet(Usuario::new); // Cria um novo objeto Usuario se o id for nulo
+		        .map(id -> entitysFetchDao.findUsuarioById(id))
+		        .orElseGet(Usuario::new); // Cria um novo objeto Usuario se o id for nulo
 
 		if (entity.getUsuarioId() == null) {
 			entity.setSenha(Optional.ofNullable(bean.getSenha())
-					.map(PasswordUtil::encryptPassword)
-					.orElse("123456")); // Senha padrão de primeiro acesso
+			        .map(PasswordUtil::encryptPassword)
+			        .orElse("123456")); // Senha padrão de primeiro acesso
 			entity.setDataCadastro(LocalDateTime.now());
 		}
 
@@ -101,20 +101,15 @@ public class UsuarioTransform {
 		entity.setIndEstoque(bean.getIndEstoque());
 
 		Perfil perfil = Optional.ofNullable(bean.getPerfil())
-				.map(p -> entitysFetchDao.getPerfil(p.getPerfilId())).orElse(null);
+		        .map(p -> entitysFetchDao.getPerfil(p.getPerfilId())).orElse(null);
 		entity.setPerfil(perfil);
 
-		List<Fornecedor> fornecedores = Optional.ofNullable(bean.getFornecedores())
-				.map(f -> f.stream().map(f -> entitysFetchDao.findFornecedorById(f.getFornecedorId()))
-						.collect(Collectors.toList()))
-				.orElse(null);
+		List<Fornecedor> fornecedores = bean.getFornecedores().stream()
+		        .map(f -> entitysFetchDao.findFornecedorById(f.getFornecedorId())).toList();
 		entity.setFornecedores(fornecedores);
-
-		List<Comprador> compradores = Optional.ofNullable(bean.getCompradores())
-				.map(c -> c.stream()
-						.map(co -> entitysFetchDao.findCompradorById(co.getCompradorId()))
-						.collect(Collectors.toList()))
-				.orElse(null);
+		
+		List<Comprador> compradores = bean.getCompradores().stream()
+		        .map(co -> entitysFetchDao.findCompradorById(co.getCompradorId())).toList();
 		entity.setCompradores(compradores);
 
 		return entity;
@@ -122,26 +117,26 @@ public class UsuarioTransform {
 
 	public FornecedorDto transform(Fornecedor entity) {
 		return FornecedorDto.builder()
-				.fornecedorId(entity.getFornecedorId())
-				.codigo(entity.getCodigo())
-				.nome(entity.getNome())
-				.layoutExcel(entity.getLayoutExcel())
-				.build();
+		        .fornecedorId(entity.getFornecedorId())
+		        .codigo(entity.getCodigo())
+		        .nome(entity.getNome())
+		        .layoutExcel(entity.getLayoutExcel())
+		        .build();
 	}
 
 	public CompradorDto transform(Comprador entity) {
 		return CompradorDto.builder()
-				.compradorId(entity.getCompradorId())
-				.codigo(entity.getCodigo())
-				.nome(entity.getNome())
-				.negocioId(entity.getNegocio().getNegocioId())
-				.build();
+		        .compradorId(entity.getCompradorId())
+		        .codigo(entity.getCodigo())
+		        .nome(entity.getNome())
+		        .negocioId(entity.getNegocio().getNegocioId())
+		        .build();
 	}
 
 	public PerfilDto transform(Perfil entity) {
 		return PerfilDto.builder()
-				.perfilId(entity.getPerfilId())
-				.descricao(entity.getDescricao())
-				.build();
+		        .perfilId(entity.getPerfilId())
+		        .descricao(entity.getDescricao())
+		        .build();
 	}
 }
